changed table border spacing, fixed select styling

--- a/extension/src/assets/styles/components/_friendRequests.scss
+++ b/extension/src/assets/styles/components/_friendRequests.scss
@@ -1,6 +1,6 @@
 .spacedTable {
   border-collapse: separate;
-  border-spacing: 10px;
+  border-spacing: 5px;
 
   .removeRule {
     color: $steam-nametag-red
